k8s/base/istio/destinationrule-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend
  namespace: cinevision
spec:
  host: frontend.cinevision.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
